--- a/cart.html
+++ b/cart.html
@@ -104,7 +104,7 @@
 						</div>
 					</div>
 				</li>
-				<li class="cart-item">
+				<!-- <li class="cart-item">
 					<div class="product">
 						<div class="product__image-container">
 							<img
@@ -120,9 +120,9 @@
 						<div class="product__prices">
 							<div class="product__price-type product__price-type-regular">
 								<div>
-									<div class="product__total product__total-regular">99.-</div>
+									<div class="product__total product__total-regular">99.-</div> -->
 									<!--    <div class="product__price-regular">99.-</div>  -->
-								</div>
+								<!-- </div>
 							</div>
 						</div>
 						<div class="product__controls">
@@ -149,7 +149,7 @@
 			<div class="cart-total">
 				<span class="cart-total-label">Сумма</span>
 				<span class="cart-total-price">297.-</span>
-			</div>
+			</div> -->
 
 			<form id="form" class="cart-form">
 				<label>
